--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "dotenv": "^17.2.0",
-    "express": "^4.18.2",
+    "dotenv": "^17.2.3",
+    "express": "^4.21.2",
     "motion": "^12.23.12",
+    "node-fetch": "^3.3.2",
+    "rough-notation": "^0.5.1",
     "simple-parallax-js": "^5.6.2",
     "zod": "^3.23.8"
   },
@@ -95,8 +97,9 @@
     "tailwindcss": "^3.4.11",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.176.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.7.0",
-    "typescript": "^5.5.3",
+    "typescript": "^5.9.3",
     "vaul": "^0.9.3",
     "vite": "^6.2.2",
     "vitest": "^3.1.4"
